# tensor-midi

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: agent_cadence.rs  clock.rs  lib.rs  nudge.rs  swing.rs  syncopation.rs  tempo.rs  tensor_map.rs
